update img opengraph

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Meta Open Graph para Redes Sociales -->
     <meta property="og:title" content="Sortis - Tarot Online con Expertos en Espiritualidad">
     <meta property="og:description" content="¿Buscas respuestas? Accede a consultas de tarot con expertos en espiritualidad y transforma tu vida con la mejor guía online.">
-    <meta property="og:image" content="https://sortis.com/images/og-image-tarot.jpg">
+    <meta property="og:image" content="/logo.png">
     <meta property="og:url" content="https://sortis.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sortis Tarot">
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sortis - Tu Consulta de Tarot Online en Minutos">
     <meta name="twitter:description" content="Encuentra respuestas con nuestras consultas de tarot en vivo. Tarotistas certificados, lectura precisa y orientación espiritual.">
-    <meta name="twitter:image" content="https://sortis.com/images/twitter-card-tarot.jpg">
+    <meta name="twitter:image" content="/logo.png">
     <meta name="twitter:site" content="@sortis_tarot">
 
     <!-- Datos estructurados JSON-LD (SEO Avanzado) -->
