Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -83,3 +83,5 @@
     <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
+
+<a href="https://www.codexloop.tech" target="_blank"   ></a>
